--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,6 +5,7 @@ $background: #0f2137;
 $primaryLight: #1e334f;
 $hover: #5f8cc7;
 $error: #f18b7e;
+$hoverError: #ec6250;
 
 $font: 'YS Text', Roboto, Helvetica, Arial, sans-serif;
 $titleFont: 'Garamond', sans-serif;
