--- a/src/common.blocks/card.scss
+++ b/src/common.blocks/card.scss
@@ -86,7 +86,7 @@
 		background-color: $error;
 
 		&:hover {
-			background-color: $hoverError;
+			background-color: $errorSecondary;
 		}
 
 		&_is-active {
